--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.2.1",
     "lib-flexible": "^0.3.2",
     "mint-ui": "^2.2.1",
+    "muse-ui": "^2.0.3",
     "vue": "^2.2.2",
     "vue-router": "^2.2.0",
     "vuex": "^2.1.1",
